--- a/src/scss/partials/_fonts.scss
+++ b/src/scss/partials/_fonts.scss
@@ -1,45 +1,44 @@
 @font-face {
   font-family: "Helvetica Neue";
-  src: url('./fonts/Helvetica45Light_22437.ttf') format('ttf');
+  src: url('../../fonts/HelveticaLight.ttf') format('ttf');
   font-weight: 300;
 }
 @font-face {
   font-family: "Helvetica Neue";
-  src: url('./fonts/Helvetica46LightItalic_22438.ttf') format('ttf');
+  src: url('../../fonts/HelveticaLightItalic.ttf') format('ttf');
   font-weight: 300;
   font-style: italic;
 }
 @font-face {
   font-family: "Helvetica Neue";
-  src: url('./fonts/Helvetica55Roman_22439.ttf') format('ttf');
+  src: url('../../fonts/HelveticaRoman.ttf') format('ttf');
   font-weight: 400;
 }
 @font-face {
   font-family: "Helvetica Neue";
-  src: url('./fonts/Helvetica56Italic_22440.ttf') format('ttf');
+  src: url('../../fonts/HelveticaItalic.ttf') format('ttf');
   font-weight: 400;
   font-style: italic;
 }
 @font-face {
   font-family: "Helvetica Neue";
-  src: url('./fonts/Helvetica65Medium_22443.ttf') format('ttf');
+  src: url('../../fonts/HelveticaMedium.ttf') format('ttf');
   font-weight: 500;
 }
 @font-face {
   font-family: "Helvetica Neue";
-  src: url('./fonts/HelveticaNeueMediumItalic.otf') format('otf');
+  src: url('../../fonts/HelveticaNeueMediumItalic.otf') format('otf');
   font-weight: 500;
   font-style: italic;
 }
 @font-face {
   font-family: "Helvetica Neue";
-  src: url('./fonts/HelveticaNeueBold.otf') format('otf');
+  src: url('../../fonts/HelveticaNeueBold.otf') format('otf');
   font-weight: 700;
-  font-style: italic;
 }
 @font-face {
   font-family: "Helvetica Neue";
-  src: url('./fonts/HelveticaNeueBlackItalic\ 1.otf') format('otf');
+  src: url('../../fonts/HelveticaNeueBlackItalic.otf') format('otf');
   font-weight: 700;
   font-style: italic;
 }
