--- a/src/scss/partials/_forms.scss
+++ b/src/scss/partials/_forms.scss
@@ -35,7 +35,7 @@
     text-align: center;
     &--desktop {
       text-align: left;
-      padding: 18px 50px;
+      padding: 18px 36px;
       border-radius: 5px;
       margin-bottom: -7px;
       &::before {
